# card-creator

./: CMakeLists.txt  README.md  cardinfo.cpp  cardinfo.h  context.h  deck.cpp  deck.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savefile.cpp  savefile.h  scene.cpp  scene.h  view.cpp  view.h
